add new features: count endpoint, selection endpoint, sort order query
Signed-off-by: Wayan Mastra <yanmastra61@gmail.com>