@@ -1,8 +1,11 @@
 package io.onebyone.quarkus.microservices.common.utils;
 
 import io.quarkus.arc.Unremovable;
+import jakarta.inject.Inject;
 import jakarta.inject.Singleton;
+import org.jboss.logging.Logger;
 
+import java.math.BigDecimal;
 import java.util.List;
 import java.util.Map;
 
@@ -11,16 +14,46 @@ import java.util.Map;
 @ParamToQueryQualifier(operator = "equals")
 public class ParamToQueryEquals extends ParamToQuery {
 
+    @Inject
+    Logger log;
+
     public ParamToQueryEquals() {
     }
 
     @Override
     public String getWhereClause(String key, List<String> value, String alias) {
-        return alias + key + "=:" + getSKey(key);
+        Object oValue = getRealValue(value.getFirst());
+        String sKey = key;
+        if (oValue instanceof String) {
+            sKey = "cast(" + key + " as string)";
+        }
+        return alias + sKey + "=:" + getSKey(key);
     }
 
     @Override
     public Map<String, Object> getFieldAndParams(String key, List<String> value, String alias) {
-        return Map.of(getSKey(key), value.get(0));
+        String sValue = value.getFirst();
+        Object oValue = getRealValue(sValue);
+        return Map.of(getSKey(key), oValue);
+    }
+
+    private Object getRealValue(String sValue) {
+        if ("true".equalsIgnoreCase(sValue)) return true;
+        if ("false".equalsIgnoreCase(sValue)) return false;
+
+        if (sValue.matches("^[0-9]*$")) {
+            try {
+                return Long.parseLong(sValue);
+            } catch (Throwable e) {
+                log.warn("Parse Long failed " + e.getMessage());
+            }
+
+            try {
+                return new BigDecimal(sValue);
+            } catch (Throwable e) {
+                log.warn("Parse BigDecimal failed " + e.getMessage());
+            }
+        }
+        return sValue;
     }
 }
